# Freedback

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  WHY.md  docker-compose.yml
.github/: packages.json
.github/scripts/: check-version-bumps.mjs  packages.mjs  plan-releases.mjs
.github/workflows/: app-ci.yml  ci.yml  container.yml  fly-deploy.yml  mobile-release.yml  pages.yml  prod-smoke.yml  release.yml  tag-and-release.yml  versions.yml
agent-prompts/: equivalence.md
apps/mobile/: Cargo.toml  README.md
apps/mobile/core/: Cargo.toml
apps/mobile/core/src/: feedback.rs  identity.rs  input.rs  journal.rs  lib.rs  share.rs
apps/mobile/core/tests/: resolve.rs  ux_e2e.rs
apps/mobile/e2e/: harness.cjs  package-lock.json  package.json  wdio.conf.cjs
apps/mobile/e2e/specs/: app.spec.cjs
apps/mobile/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json  mobile.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/mobile/ui/: app.css  app.js  index.html
crates/advanced-client/: Cargo.toml
crates/advanced-client/src/: lib.rs  main.rs
crates/advanced-client/tests/: sync.rs
crates/cli-client/: Cargo.toml
crates/cli-client/src/: lib.rs  main.rs
crates/cli-client/tests/: e2e.rs
crates/collection-server/: Cargo.toml
crates/collection-server/src/: equivalence.rs  lib.rs  main.rs  persist.rs  token_bucket.rs
crates/collection-server/tests/: cluster.rs
crates/discovery-server/: Cargo.toml
crates/discovery-server/src/: clock.rs  lib.rs  main.rs  relays.rs
crates/discovery-server/tests/: cluster.rs
crates/feedback-server/: Cargo.toml
crates/feedback-server/src/: auth.rs  collection.rs  error.rs  handlers.rs  httpdate.rs  lib.rs  main.rs
crates/feedback-server/tests/: conformance.rs  integration.rs
crates/protocol-lib/: Cargo.toml
crates/protocol-lib/src/: canonical.rs  context.rs  erasure.rs  error.rs  export.rs  identity.rs  jsonld.rs  jsonld_full.rs  lib.rs  mangrove.rs  model.rs  negentropy.rs  rdf.rs  validation.rs
crates/protocol-lib/tests/: widget_interop.rs
crates/protocol-lib/tests/fixtures/: widget-signed.json
crates/storage/: Cargo.toml
crates/storage/src/: conformance.rs  lib.rs  memory.rs  oxigraph_store.rs  sqlite_store.rs
demo-react/: index.html  package-lock.json  package.json  vite.config.js
demo-react/public/: freedback-widgets.js
demo-react/src/: App.jsx  FreedbackWidget.jsx  ThemeToggle.jsx  main.jsx  mock-backend.js  styles.css
demo-third-party/: index.html
deploy/fly/: default.toml  demo.toml  discovery.toml  feedback.toml
docs/: README.md  architecture.md  attributions.md  deployment.md  hosting.md  naming.md  roadmap.md  white-book.md  widgets-react.md
docs-tools/: build-docs.mjs  package-lock.json  package.json
docs/adr/: 0001-rust-workspace-and-wire-format.md  0002-dedup-id-jcs.md  0003-dual-identity-p256.md  0004-validation-in-shacl.md  0007-jsonld-primary-ingest.md  0008-snapshot-persistence.md  0009-custom-rating-scales.md  0010-jwt-export-profile.md  0011-full-jsonld-compaction.md  0012-cache-freshness-and-validators.md  0013-webcrypto-widget-signing.md  0014-nip65-relay-list-resolver.md  0015-discovery-hardening.md  0015-storage-durability.md  0016-storage-durability.md  0017-negentropy-sync.md  0018-feedback-server-conformance.md  0019-deployment-musl-rocksdb-release.md  0020-canonical-domain-freedback-net.md  0021-right-to-erasure-deletion.md  0022-data-licensing.md  0023-issue-feedback-type.md  0024-replies-threading.md
firefox-extension/: manifest.json  popup.html  popup.js
ontology/: context.jsonld  freedback.ttl  shapes.ttl
site/: freedback.css  index.html  theme.js
site/anywhere/: index.html  mock.js
site/author/: author.js  index.html
site/barcode/: barcode.js  index.html
site/collect/: index.html  mock.js
site/privacy/: index.html
site/questionnaire/: index.html  mock.js
widgets/: README.md  build.mjs  demo.html  freedback-widgets.d.ts  freedback-widgets.js  package-lock.json  package.json  test.cjs
widgets/e2e/: e2e.html  playwright.config.cjs  run-e2e.cjs  serve.cjs  widgets.spec.cjs
widgets/src/: index.js
