# The Freedback mobile app is its OWN workspace, excluded from the root one
# (root Cargo.toml `exclude = ["apps/mobile"]`), so `cargo test --workspace`
# at the repo root never builds the Tauri/Android dependency tree. The
# protocol crates are reached through plain path dependencies.
[workspace]
resolver = "2"
members = ["core", "src-tauri"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/victorpaleologue/freedback"
authors = ["Victor Paléologue and the Freedback contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

[profile.release]
lto = "thin"
strip = true

# Keep dev builds of the (heavy) RDF/HTTP stack reasonably fast.
[profile.dev.package."*"]
opt-level = 1
