[package]
name = "freedback-discovery-server"
description = "Freedback discovery server (registry): announce + verify + resolve."
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "freedback_discovery_server"

[[bin]]
name = "freedback-discovery-server"
path = "src/main.rs"

[dependencies]
freedback-protocol = { path = "../protocol-lib", default-features = false }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
freedback-feedback-server = { path = "../feedback-server" }
freedback-storage = { path = "../storage" }
freedback-protocol = { path = "../protocol-lib" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
