[package]
name = "freedback-protocol"
description = "Freedback core protocol library: Web Annotation model, JCS dedup ids, P-256 identity, JSON-LD and SHACL (native)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "freedback_protocol"

[features]
default = []
# Opt-in marker for browser/wasm builds (enables getrandom/js where needed).
wasm = ["getrandom/js", "uuid/js"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
getrandom = { version = "0.2" }

# Pure-Rust RDF parsing for the shapes-driven validator (dual-target).
oxrdf = { workspace = true }
oxttl = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
