[package]
name = "freedback-protocol"
description = "Freedback core protocol library: Web Annotation model, JCS dedup ids, P-256 identity, JSON-LD and SHACL (native)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "freedback_protocol"

[features]
default = ["validation"]
# Shapes-driven SHACL-Core-subset validation (native). Pulls the pure-Rust RDF
# parsers (oxrdf/oxttl). WASM builds omit this and rely on server-side
# validation (see docs/adr/0004) — that keeps the browser bundle free of the
# RDF/rand dependency chain.
validation = ["dep:oxrdf", "dep:oxttl"]
# Opt-in marker for browser/wasm builds (enables getrandom/js where needed).
wasm = ["getrandom/js", "uuid/js"]
# Full JSON-LD expansion of arbitrary third-party @contexts via the json-ld
# crate (native only; the alias-based `from_jsonld` covers the pinned vocab).
jsonld = ["dep:json-ld", "dep:json-syntax", "dep:static-iref", "dep:iref", "dep:futures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
getrandom = { version = "0.2" }

# Pure-Rust RDF parsing for the shapes-driven validator (native; `validation`).
oxrdf = { workspace = true, optional = true }
oxttl = { workspace = true, optional = true }

# Full JSON-LD processor (native; `jsonld` feature).
json-ld = { version = "0.21", optional = true }
json-syntax = { version = "0.12", features = ["serde_json"], optional = true }
static-iref = { version = "3", optional = true }
iref = { version = "3", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
