[package]
name = "freedback-storage"
description = "FeedbackStore trait + storage backends (in-memory, Oxigraph, SQLite) for Freedback."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "freedback_storage"

[features]
default = ["oxigraph"]
# Oxigraph primary backend (in-memory; RocksDB disabled for portability).
oxigraph = ["dep:oxigraph"]
# SQLite-backed durable mock (rusqlite, bundled C dep — NATIVE ONLY, never wasm).
sqlite = ["dep:rusqlite"]

[dependencies]
freedback-protocol = { path = "../protocol-lib" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
oxigraph = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
